--- a/resume.html
+++ b/resume.html
@@ -47,12 +47,34 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work History
                         </h3>
+                    </div>
+                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="08/2010 - 09/2014">
+                        <h4>HM Forces</h4>
+                        <p>Communications Systems Operator (Royal Signals)</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2015 - 08/2017">
+                        <h4>Labwaste Ltd</h4>
+                        <p>Logistics Manager</p>
+                    </div>
+                    <div class="timeline-item" data-dates="08/2017 - 08/2018">
+                        <h4>Atlas Copco Ltd</h4>
+                        <p>Synatec Software Engineer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="08/2018 - 01/2022">
+                        <h4>Crane Inc Ltd</h4>
+                        <p>Software Support Co-Ordinator</p>
+                    </div>
+                    <div class="timeline-item" data-dates="01/2022 - Present">
+                        <h4>Hivestack</h4>
+                        <p>Platform Support Specialist EMEA</p>
                     </div>
                 </div>
             </div>
