--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("GUWG7BIF7OczcrACb");
+      emailjs.send("service_8c9sq6v","Project_Test", {name: "Aaron", notes: "The project that I want is ...."});
+   })();
+</script>
 </head>
 <body>
     <header>
